[gd_scene load_steps=5 format=3 uid="uid://d18nkw05phsou"]

[ext_resource type="Script" uid="uid://17cspirw46qn" path="res://CryptoPitch.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://dpefm6me651tp" path="res://Subway car holder.jpeg" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://77p3ekerul8w" path="res://Conductor.PNG" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://b7uxobflqvfpx" path="res://Greed Holder.PNG" id="4_lquwl"]

[node name="Node2D" type="Node2D"]

[node name="main" type="Node2D" parent="."]
script = ExtResource("1_0xm2m")

[node name="Background" type="Sprite2D" parent="main"]
position = Vector2(577.75, 324)
scale = Vector2(4.442085, 3.298969)
texture = ExtResource("2_h2yge")

[node name="Character" type="Node2D" parent="main"]

[node name="Conductor" type="Sprite2D" parent="main/Character"]
position = Vector2(260, 368.00006)
scale = Vector2(0.18249227, 0.18249227)
texture = ExtResource("3_1bvp3")

[node name="Greedyman" type="Sprite2D" parent="main/Character"]
visible = false
position = Vector2(273, 373)
scale = Vector2(0.17956172, 0.17956172)
texture = ExtResource("4_lquwl")

[node name="Girl" type="Sprite2D" parent="main/Character"]

[node name="Hider" type="Sprite2D" parent="main/Character"]

[node name="UI" type="CanvasLayer" parent="main"]

[node name="DialogueBox" type="Panel" parent="main/UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabe1" type="Label" parent="main/UI/DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DialogueText" type="RichTextLabel" parent="main/UI/DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChoicesContainer" type="VBoxContainer" parent="main/UI/DialogueBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
